# automoma

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  test_cuda.py  test_data_structure.py  test_trajectory_stacking.py
automoma/: __init__.py  env.py  planner.py
automoma/core/: __init__.py  types.py
automoma/planning/: __init__.py  io_utils.py  pipeline.py  planner.py
automoma/utils/: file_utils.py  math_utils.py  visual_utils.py
configs/: config.yaml  default_env_cfg.yaml  default_plan_cfg.yaml  plan.yaml
configs/exps/multi_object_open/: eval.yaml  plan.yaml  record.yaml  train.yaml
configs/exps/single_object_open_test/: eval.yaml  plan.yaml  record.yaml  train.yaml
configs/exps/single_object_pick/: eval.yaml  plan.yaml  record.yaml  train.yaml
configs/exps/single_object_reach/: eval.yaml  plan.yaml  record.yaml  train.yaml
debug/2026-06-10_policy_imitation_learning/: README.md
debug/2026-06-10_policy_imitation_learning/scripts/: diagnose_pi_fast_checkpoint.py  h100_diagnose_pi_fast_checkpoint.slurm
docker/: Dockerfile  Dockerfile.dockerignore  README.md  build_docker.sh  check_env.py  common.sh  entrypoint.sh  isaac_sim.dockerfile  isaac_sim.dockerfile.dockerignore  requirements-automoma.txt  run_docker.sh  smoke_plan_record_convert.sh  start_docker.sh  test_pipeline_host.sh
docs/: 2026-06-18_30k_pipeline.md  ENHANCED_REPLAY_PIPELINE.md  per_object_plan_cfg.md  per_object_plan_cfg_implementation.md  per_object_plan_cfg_quickref.md  pipeline.md  robot_config_design.md  tools.md  workflows.md
docs/release/: automoma-30k.md  automoma-500k.md
examples/: example.py  example_plan.py  example_replay.py  example_replay_enhanced.py  example_replay_reach.py  interactive_visualizer.ipynb
scripts/: analyze_hdf5_size.py  batch_scene_requirements.py  clean_curobo_build.sh  compute_urdf_metadata.py  convert_automoma_to_dp3.py  ee_pose_trace.py  env.md  env.sh  finalize_legacy_archive.sh  generate_fetch_akr.py  guard_record_logs.sh  interpolate_traj.py  lerobot_eval_aligned.py  pick_data.py  pick_data_automoma.py  pipeline_collect.py  pipeline_plan.py  plan.py  prepare_scene.py  prepare_traj.py  quickstart.sh  record_dataset_eval.py  rl_comp_stat.py  robotwin_dp3_eval.py  robotwin_eval.sh  robotwin_train.sh  run.sh  run_batch.sh  run_docker.sh  run_grasp_filter_metrics.py  run_microwave_7221_resume_record.sh  run_pipeline.sh  run_simple.sh  run_test.sh  setup_sim_env.sh  start_grasp_filter_metrics_tmux.sh  supervise_episode_transfer.sh  time_clear.sh  tmp.sh  track_indices.py  (+3 more)
scripts/assets/: convert_acronym_grasps_to_npy.py  convert_obj_to_automoma_asset.py  scale_urdf.py  visualize_urdf_grasps.py
scripts/auto/: auto_pipeline.sh  auto_worker.dockerfile  build_docker.sh  run_docker.sh
scripts/config/: automoma_data_pick_statistic.json  automoma_data_statistic.json  convert_statistic.json  data_pick_statistic copy.json  data_pick_statistic.json  data_statistic.json
scripts/cvpr26/: robotwin_dp3_eval.py
scripts/dataset/: automoma_dataset_viz.py  prepare_object.py  prepare_scene.py  prepare_scene_pipeline.py  prepare_traj.py
scripts/debug/: batch_scene_requirements.py  batch_usd_preprocess.py  check_and_convert_rotations.py  check_dataset.py  check_dataset_aliyunpan_download.py  compare_grasp_pose.py  convert_traj_backup.py  debug_filter_pipeline_plan.py  debug_usd_prims.py  filter_base_rotation_traj.py  filter_traj.py  generate_pose.py  interactive_visualizer.ipynb  manage_dataset.py  manage_dataset_merge.py  metadata_statitics.py  pick_data_automoma.py  process_data_remove_feature.sh  refilter_trajectories.py  requirement.json  rewrite_asset_path.py  run_record_ablation.py  test_new.py  test_ramdisk_io.py  upload_lerobot.py  usdc_deactivate.py
scripts/debug/code_validation/: build_validation_episode_manifest.py  build_validation_subsets.py  manage_validation_trajs.py  run_pipeline.sh  summarize_validation_results.py
scripts/debug/config/: automoma_data_pick_statistic.json
scripts/debug/eval_align/: compare_record_eval.py
scripts/debug/grasp_convert/: viz_grasp_pose.py
scripts/example/: example_plan.py  replayer.py
scripts/launch/: run_test_pipeline.sh
scripts/paper/: visualize_scene.py
scripts/pipeline/: 1_generate_plans.py  2_render_dataset.py  3_train.py  4_evaluate.py
scripts/public/automoma-500k/: README.md
scripts/publish/automoma-30k/: README.md  organize_hdf5.py
scripts/publish/automoma-500k/: plan_automoma_500k.py  run.sh  run_test.sh  trajectory_statistics.py  verify_counts.py  watch_progress.py
scripts/statistic/: README.md  analyze_clustering_stats.py  analyze_ik.py  analyze_ik_cluster_ablation.py  analyze_ik_clustering.py  analyze_ik_curobo.py  analyze_ik_mmd.py  analyze_scene_objects.py  analyze_traj.py  analyze_traj_success_rate.py  config.py  data_loader.py  quickstart_ik_curobo.py  run_all_analyses.py  show_cluster_results.py  test_mmd.py  test_mmd_config.py  test_mmd_standalone.py  traj_statistic.py  utils.py
scripts/utils/: r_h100.sh  rc_h100.sh
scripts/utils/aliyunpan/: download_ckpt.py  download_ckpt_log.yaml  download_lerobot.py  download_log.yaml  upload_ckpt.py  upload_lerobot.py  upload_log.yaml  upload_log_backup.yaml
scripts/utils/rclone/: transfer_meta.py
src/: rc_h100.sh
src/automoma/: __init__.py
tests/: read_pt.py  test_grasp_result_aggregation.py
tests/debug/: grasp_reorganize.py
tools/assets/: prepare_object.py  prepare_scene.py  prepare_scene_pipeline.py  render_object_foreground.py
tools/dataset/: convert_hdf5_layout.py  convert_split_hdf5_to_lerobot_v30.py  prepare_traj.py  viz_hdf5.py
tools/debug/: run_grasp_filter_metrics.py  start_grasp_filter_metrics_tmux.sh
tools/dev/: clean_curobo_build.sh  env.sh  run_test_pipeline.sh
tools/eval/: ee_pose_trace.py  lerobot_eval_aligned.py  record_dataset_eval.py
tools/ops/: archive_hdf5_chunks.py  guard_record_logs.sh  supervise_episode_transfer.sh  watch_transfer_hdf5_episodes.py
tools/robotwin/: robotwin_dp3_eval.py  robotwin_eval.sh  robotwin_train.sh
(+138 files in other folders)
