[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "automoma"
authors = [
    {name = "Xinhai Chang"},
]
description = "A Python package for robot trajectory generation and simulation"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    # Core numerical stack
    "numpy",
    "scipy",
    "torch",
    # Config / I/O
    "PyYAML",
    "tqdm",
    # Optional dataset converters import these lazily, but they are common enough
    # to keep in the base install.
    "h5py",
    "zarr",
    "scikit-learn",
    "trimesh",
    "yourdfpy",
    "usd-core"
    "omegaconf",
]

[project.optional-dependencies]
plan = [
    # Motion planning backend
]

record = [
    # Isaac Sim stack (usually provided by the Isaac Sim container environment)
]

eval = [
    # Policy evaluation + dataset wrappers
    "lerobot",
    "omegaconf",
]

dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "pylint>=2.12",
    "mypy>=0.910",
]

[project.urls]
Repository = "https://github.com/chang-xinhai/AutoMoMa.git"

[tool.flit.module]
name = "automoma"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
