[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "automoma"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A Python package for robot trajectory generation using curobo as planner"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26.0",
    "torch==2.7.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0",
    "h5py>=3.10",
    "ipywidgets>=8.0",
    "omegaconf>=2.3.0",
    "yourdfpy>=0.0.53",
    "scikit-learn>=1.3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# Plan mode: curobo planning with isaacsim support
# NOTE: CUDA toolkit is required to build curobo's CUDA extensions.
# If CUDA_HOME is not set, curobo will fail to install in editable mode.
plan = [
    "tomli>=2.0.0",
    "wheel>=0.40.0",
    "ninja>=1.11.0",
    "setuptools>=71.0.0",
    "usd-core",
    # curobo must be installed separately after setting CUDA_HOME:
    # pip install -e "./third_party/curobo[isaacsim]" --no-build-isolation
]

# Sim mode: plan + isaacsim + IsaacLab + IsaacLab-Arena
sim = [
    "isaacsim[all,extscache]==5.1.0",
    "numpy==1.26.0",
    "tomli>=2.0.0",
    "wheel>=0.40.0",
    "ninja>=1.11.0",
    "setuptools>=71.0.0",
    "torchvision==0.22.0",
    "lightwheel-sdk==1.0.1",
    "onnxruntime==1.23.2",
]

# Train mode: LeRobot conversion/training dependencies.
# Combine with sim for the full local record/convert/train/eval pipeline:
# pip install -e ".[sim,train]"
train = [
    "datasets>=4.0.0,<4.2.0",
    "diffusers>=0.27.2,<0.36.0",
    "huggingface-hub[hf-transfer,cli]>=0.34.2,<0.36.0",
    "accelerate>=1.10.0,<2.0.0",
    "einops>=0.8.0,<0.9.0",
    "opencv-python-headless>=4.9.0,<4.13.0",
    "av>=15.0.0,<16.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "packaging>=24.2,<26.0",
    "pynput>=1.7.7,<1.9.0",
    "pyserial>=3.5,<4.0",
    "wandb>=0.24.0,<0.25.0",
    "draccus==0.10.0",
    "gymnasium>=1.1.1,<2.0.0",
    "rerun-sdk>=0.24.0,<0.27.0",
    "deepdiff>=7.0.1,<9.0.0",
    "imageio[ffmpeg]>=2.34.0,<3.0.0",
    "termcolor>=2.4.0,<4.0.0",
    "onnxruntime==1.23.2",
    "vuer[all]==0.0.70",
    "qpsolvers==4.8.1",
    "usd-core",
    "zarr>=2.18.0,<3.0.0",
    "fpsample>=1.0.0,<2.0.0",
]

# Dev mode: development tools. Combine with other extras as needed.
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "pylint>=2.12",
    "mypy>=0.910",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "pre-commit>=2.15",
]

# Legacy aliases for backwards compatibility
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.6",
    "pytest-xdist>=2.4",
]

docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/automoma"
Documentation = "https://automoma.readthedocs.io/"
Repository = "https://github.com/yourusername/automoma.git"
"Bug Tracker" = "https://github.com/yourusername/automoma/issues"

[project.scripts]
automoma = "automoma.env:main"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | third_party
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=automoma",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--junit-xml=tests/junit.xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests as requiring GPU",
    "robot: marks tests as requiring robot hardware",
]

[tool.coverage.run]
source = ["automoma"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "curobo.*",
    "torch.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "import-error",
    "no-name-in-module",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-public-methods = 25

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]
